--- a/src/index.scss
+++ b/src/index.scss
@@ -6,14 +6,8 @@
 		display: flex;
 		flex-direction: column;
 		width: 360px;
+		& img {
+			width: 360px;
+		}
 	}
 }
-
-// <article className="cocktail-container" key={cocktail.idDrink}>
-// 							<h2>{cocktail.strDrink}</h2>
-// 							<img src={cocktail.strDrinkThumb} alt={cocktail.strDrink} />
-// 							<p>{cocktail.strInstructions}</p>
-// 							<button onClick={() => this.handleClick(cocktail.idDrink)}>
-// 								Delete me
-// 							</button>
-// 						</article>
