--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,37 @@
-.App {
-	display: flex;
-	gap: 20px;
+body{
+margin: 15px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
+    background-color: rgba(95, 158, 160, 0.555);
 }
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
+button{
+    width: 120px;
+    height: 40px;
+    background-color: rgb(29, 29, 230);
+    border-radius: 10px;
+    border-style: none;
+    color: bisque;
+    cursor: pointer;
+    margin-left: 90px;
 }
-.languages p {
-	background-color: red;
-	text-align: center;
+.main {
+   background-color: rgba(122, 116, 206, 0.752);
+   width: 100%;
+   height: 350px;
+   border-top-left-radius: 120px;
+   border-bottom-right-radius: 120px;
+   box-shadow: 0 0 50px 0 rgba(2, 174, 197, 0.762);
 }
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
+h1{
+    margin-top: 30px;
+   margin-left: 90px;
 }
-.number {
-	font-size: 40px;
-	text-align: center;
+p{
+    margin-left: 90px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
+h5{
+    font-size: 12px;
+    margin-left: 90px;
+    font-family:'Times New Roman', Times, serif;
+    color:rgba(0, 0, 0, 0.805)
 }
