--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,12 @@
 .App-link {
 	color: #61dafb;
 }
+
+@keyframes App-logo-spin {
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
+}
