--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,134 @@
-.App {
+body{
+	background-color: antiquewhite;
+  }
+  
+  .App {
+	text-align: center;
+  }
+  
+  .wrp{
 	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
+	justify-content: space-around;
+	align-items: center;
+	gap:1rem;
+	flex-wrap: wrap;
+	height: auto;
+	background-color: antiquewhite;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
+	
+  }
+  
+  .cocktails{
+  height: 42rem;
+  width:  20rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: scroll;
+  box-shadow: 5px 5px 30px black;
+  position: relative;
+  
+  }
+  
+  .cocktail-name{
+	height: 13%;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	text-shadow: 2px 2px 5px;
+  }
+  
+  
+  .cocktails img{
+	height:50%;
+	width: 100%;
+	position: absolute;
+	top:13%;
+  }
+  
+  .instr{
+	position: absolute;
+	top:63%;
+	height:30%;
+	overflow: hidden;
+  }
+  
+  
+  
+  .cocktails button {
+	border: none;
+	height: 5vh;
+	width: 30vw;
+	border-radius: 40px;
+	background-color: #333;
+	color: antiquewhite;
+	font-weight: bold;
+	font-size: 1rem;
+	text-shadow: 2px 2px 5px black;
+	position: absolute;
+	bottom: 1rem;
+  }
+  
+  .cocktails button:hover{
+	box-shadow: 5px 5px 30px black;
+	cursor: pointer;
+  }
+  
+  
+  .posts-wrp{
+	height: auto;
+	margin-top: 10rem;
+	margin-bottom: 1rem;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
-}
+	gap: 1rem;
+	padding: 1rem;
+  }
+  
+  .post-cont{
+	box-shadow: 2px 2px 10px black;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .post-cont button {
+	border: none;
+	height: 30px;
+	width: 150px;
+	border-radius: 40px;
+	background-color: #333;
+	color: antiquewhite;
+	font-weight: bold;
+	font-size: 1rem;
+	text-shadow: 2px 2px 5px black;
+	margin-bottom: 1rem;
+  }
+  
+  .post-cont button:hover {
+  cursor: pointer;
+  box-shadow: 5px 5px 30px black;
+  }
+  
+  
+  
+  .comments-list{
+	list-style: none;
+  }
+  
+  .comment-item::after{
+  content: '';
+  width: 100%;
+  height: 1px;
+  background-color: black;
+  position: absolute;
+  bottom: -10px;
+  left: -10px
+  }
+  .comment-item{
+  position: relative;
+  }
