--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,23 @@
 .App {
 	display: flex;
-	gap: 20px;
 }
+
 .languages {
 	border: solid 1px lightgray;
 	box-shadow: 0 0 10px gray;
 }
+
 .languages p {
 	background-color: red;
 	text-align: center;
 }
+
 .App img {
 	height: 200px;
 	aspect-ratio: 4/4;
 	pointer-events: none;
 }
+
 .number {
 	font-size: 40px;
 	text-align: center;
@@ -39,4 +42,86 @@
 
 .App-link {
 	color: #61dafb;
+}
+
+/* todo styles */
+
+.to-do-app {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 70vh;
+}
+
+input {
+	position: relative;
+	width: 350px;
+	height: 30px;
+	border-radius: 10px;
+	border: 1px solid gray;
+	font-size: 18px;
+}
+
+input::placeholder {
+	font-size: 18px;
+}
+
+#add-button {
+	margin-top: 7px;
+	width: 80px;
+	height: 40px;
+	font-size: 21px;
+	color: white;
+	background-color: rgb(36, 36, 36);
+	border: none;
+	border-radius: 10px;
+	cursor: pointer;
+}
+
+ul {
+	list-style: none;
+	padding: 0;
+}
+
+li {
+	display: flex;
+	justify-content: space-between;
+	border: 1px gray dashed;
+	background-color: rgb(211, 211, 211);
+	border-radius: 10px;
+	font-size: 20px;
+}
+
+li:hover{
+	display: flex;
+	justify-content: space-between;
+	border: 1px gray solid;
+	background-color: rgb(194, 194, 194);
+	border-radius: 10px;
+	font-size: 20px;
+}
+
+li span {
+	padding: 10px 30px 10px 10px;
+}
+
+#del-btn {
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	color: white;
+	background-color:#e92a2a91;
+	font-size: 20px;
+	border: none;
+	cursor: pointer;
+}
+
+#del-btn:hover {
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	color: white;
+	background-color:#e92a2a;
+	font-size: 20px;
+	border: none;
+	cursor: pointer;
 }
