make live-search

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,28 @@
-.cocktails-container {
-	display: flex;
-	gap: 20px;
-	flex-wrap: wrap;
-	.cocktail-container {
-		display: flex;
-		flex-direction: column;
-		width: 360px;
-		& img {
-			width: 360px;
-		}
-	}
+body {
+  margin: 0;
+  padding: 0;
+
+  background-color: antiquewhite;
+
+  display: flex;
+  justify-content: center;
+
+  .cocktail-search {
+    width: 70vw;
+
+    .search-inp-butt {
+      width: 100%;
+      margin-top: 30px;
+
+      display: flex;
+
+      input {
+        width: 100%;
+      }
+    }
+
+    ul {
+      list-style-type: decimal;
+    }
+  }
 }
