did todos homework

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,67 @@
-.App {
-	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+.Main-Div {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+.form {
+  margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.hr {
+  width: 100%;
+}
+.Headone {
+  font-size: 60px;
+  margin: 0;
+  padding: 0;
+  margin-left: 20%;
+}
+.input {
+  padding: 20px;
+  width: 700px;
+  height: 20px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: 1px solid gray;
+  margin-top: 5px;
+  font-size: 20px;
+}
+.button {
+  width: 60px;
+  height: 40px;
+  background: black;
+  color: white;
+  border-radius: 7px;
+  opacity: 0.9;
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+.return {
+  margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 5px;
 }
-
-.App-link {
-	color: #61dafb;
+.li {
+  font-size: 20px;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  padding: 20px;
+  width: 700px;
+  height: 20px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
 }
