--- a/src/App.css
+++ b/src/App.css
@@ -2,29 +2,6 @@
 	display: flex;
 	gap: 20px;
 }
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
 
 .App-header {
 	background-color: #282c34;
@@ -39,4 +16,72 @@
 
 .App-link {
 	color: #61dafb;
+}
+
+/* ......... */
+body {
+	margin: 0;
+	padding: 0;
+}
+
+.search-app {
+	background-color: #dfdfdf;
+	height: 100vh;
+	width: 100vw;
+}
+
+.search-bar-container {
+	padding-top: 20vh;
+	width: 40%;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	min-width: 200px;
+}
+
+.input-wrapper {
+	background-color: white;
+	width: 100%;
+	border-radius: 10px;
+	height: 2.5rem;
+	padding: 0 15px;
+	box-shadow: 0px 0px 8px #ddd;
+	display: flex;
+	align-items: center;
+}
+
+input {
+	background-color: transparent;
+	border: none;
+	height: 100%;
+	font-size: 1.25rem;
+	width: 100%;
+	margin-left: 5px;
+}
+
+input:focus {
+	outline: none;
+}
+
+#search-icon {
+	height: 75%;
+	fill:#455a85;
+}
+
+.results-list {
+	width: 70%;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	box-shadow: 0px 0px 8px #ddd;
+	border-radius: 10px;
+	margin-top: 1rem;
+	min-height: 100px;
+	max-height: 300px;
+	overflow-y: scroll;
+}
+
+.results-list p{
+	margin-left: 10px;
 }
