creat timer component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,39 @@
-.cocktails-container {
-	display: flex;
-	gap: 20px;
-	flex-wrap: wrap;
-	.cocktail-container {
-		display: flex;
-		flex-direction: column;
-		width: 360px;
-		& img {
-			width: 360px;
-		}
-	}
+body {
+  background-color: beige;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .countdown {
+    margin: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 35px;
+
+    h1 {
+      color: blue;
+    }
+
+    p {
+      color: red;
+    }
+    .countdown-form {
+      display: flex;
+      flex-direction: row;
+
+      input {
+        border-radius: 10px;
+        text-align: center;
+      }
+      button {
+        margin-left: 10px;
+        padding: 10px 20px;
+        box-sizing: border-box;
+        border-radius: 10px;
+      }
+    }
+  }
 }
