--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,57 @@
-.App {
+.timer-container {
+	width: 90%;
+	height: auto;
+	display: flex;
+	justify-content: center;
+	margin-right: 100px ;
+	margin-left: 100px ;
+	margin-top: 100px;
+}
+
+
+.timer {
+	width: 500px;
+	height: auto;
+	display: flex;
+	align-items: center;
+	text-align: center;
+	
+}
+
+.clock {
+	
+	width: 700px;
+	height: auto;
+	display: flex;
+	align-content: center;
+	justify-content: space-around;
+	background-color: brown;
+	padding-bottom: 60px;
+	border-radius: 30px;
+
+}
+
+.clockcenter {
+
+	width: 200px;
+	height: auto;
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	background-color: brown;
+	padding-bottom: 60px;
+	border-radius: 30px;
+
+}
+
+.text {
+
+	font-size: 40px;
+
+ }
+
+
+/* .App {
 	display: flex;
 	gap: 20px;
 }
@@ -39,4 +92,4 @@
 
 .App-link {
 	color: #61dafb;
-}
+} */
