--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ body{
 	border-radius: 20px;
   }
 
-  .carousel-thumbnail:hover{
+  .carousel-pic:hover{
 	box-shadow: 5px 5px 20px black;
   }
   
