--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,30 @@
-.cocktails-container {
+// .cocktails-container {
+// 	display: flex;
+// 	gap: 20px;
+// 	flex-wrap: wrap;
+// 	.cocktail-container {
+// 		display: flex;
+// 		flex-direction: column;
+// 		width: 360px;
+// 		& img {
+// 			width: 360px;
+// 		}
+// 	}
+// }
+.carucont{
 	display: flex;
-	gap: 20px;
-	flex-wrap: wrap;
-	.cocktail-container {
-		display: flex;
-		flex-direction: column;
-		width: 360px;
-		& img {
-			width: 360px;
-		}
-	}
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+.container{
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	gap: 15px;
+}
+.carouseldiv{
+	display: flex;
+	flex-direction: row;
+	gap: 15px;
 }
