--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,33 @@
-
-body{
+.maincont{
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
 }
-
 
 img {
-    width: 80px;
-    height: 80px;
+    width: 380px;
+    height: 380px;
 }
 
 
-.carucont{
+.imgcont{
 	display: flex;
-	width: 900px;
-	height: 500px;
+	justify-content: center;
+	width: 100%;
+	height: 50%;
+	margin-bottom: 130px;
+	margin-top: 20px;
 }
-button{
+.imglist{
+	width: 100%;
 	display: flex;
-	justify-content: end;
+	flex-wrap: wrap;
+}
+.list{
+	width: 150px;
+	height: 150px;
+	gap: 20px;
+	margin-left: 10px;
+	margin-top: 5px;
+	
 }
