--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,25 @@
-.App {
+.raodenoba{
 	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
+	/* justify-content: center;
+	align-items: center; */
+
+	justify-content: end;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+/* .container{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
+.artikli{
+	width: 100%;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
+} */
 
-.App-link {
-	color: #61dafb;
+
+
+.suratebi{
+	width: 250px;
 }
