--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,77 @@
-.App {
-	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
+.container {
+	background: linear-gradient(to right bottom, #e1b382, #c89666);
+	width: 100%;
 	min-height: 100vh;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+	align-items: center;
 }
 
-.App-link {
-	color: #61dafb;
+.app-wrapper {
+	background-color: #12343b;
+	min-width: 450px;
+	min-height: 650px;
+	padding: 30px;
+	box-sizing: border-box;
+	border-radius: 10px;
+	box-shadow: 3px 6px 40px #000;
+
+}
+
+.header h1 {
+	color: #fff;
+	text-align: center;
+	margin: 30px 0;
+}
+
+.task-input {
+	outline: none;
+	width: 260px;
+	padding: 15px;
+	margin-right: 25px;
+	font-size: 20px;
+	color: #ccc;
+	background-color: #000000;
+	border: 1px solid #c89666;
+	border-radius: 10px;
+}
+
+.button-add {
+	width: 70px;
+	padding: 15px 15px;
+	font-size: 20px;
+	border-radius: 10px;
+	border: 0;
+	background-color: #f1af71;
+	cursor: pointer;
+}
+
+.list-item {
+	display: flex;
+	margin: 20px 0;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	padding: 10px;
+	max-height: 30px;
+
+}
+
+
+
+
+
+.list {
+	width: 220px;
+	background-color: #12343b;
+	border: none;
+	color: #ccc;
+	font-size: 20px;
+	padding-left: 10px;
+	margin-right: 15px;
 }
