--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,138 @@
 		}
 	}
 }
+
+
+.body{
+	background: radial-gradient(circle, #FF4500, #FF6347);
+}
+
+.root{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+	flex-wrap: wrap;
+	
+	
+}
+
+.cont{
+	width: 95vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	gap:1rem;
+	
+}
+
+input{
+width: 95vw;
+height: 5vh;
+}
+
+.todos {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+
+    &::after {
+      content: '';
+      width: 100%;
+      position: absolute;
+      height: 2px;
+      background-color: gray;
+      top: 2rem;
+    }
+  }
+
+
+  .del:last-child {
+    width: 6rem;
+    height: 1.8rem;
+    border-radius: 10px;
+    outline: none;
+    background: linear-gradient(180deg, #1e1e1e, #000000);
+    color: bisque;
+    font-size: 1rem;
+    cursor: pointer;
+
+    &:hover {
+      box-shadow: 5px 5px 30px black;
+    }
+  }
+
+
+  .done {
+    border: none;
+    background-color: transparent;
+    opacity: 0.6;
+    cursor: pointer;
+    position: absolute;
+    right: 7rem;
+    top: 3px;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+
+
+
+  .counter-container {
+	width: 200px;
+	margin: 0 auto;
+	text-align: center;
+  
+	h2 {
+	  font-size: 24px;
+	  margin-bottom: 10px;
+	}
+  
+	.count {
+	  font-size: 48px;
+	  margin-bottom: 20px;
+	}
+  
+	.button-container {
+	  display: flex;
+	  justify-content: center;
+	  margin-bottom: 20px;
+  
+	  button {
+		padding: 10px 20px;
+		font-size: 18px;
+		background-color: palevioletred;
+		color: #fff;
+		border: none;
+		cursor: pointer;
+  
+		&:hover {
+		  background-color: rgb(59, 16, 30);
+		}
+	  }
+  
+	  .decrement-button {
+		margin-right: 10px;
+	  }
+	}
+  
+	.reset-button {
+	  display: block;
+	  margin: 0 auto;
+	  background-color: steelblue;
+	  border: none;
+	  width: 6rem;
+	  height: 2rem;
+	  border-radius: 15px;
+	
+	}
+  }
+
+  button{
+	cursor: pointer;
+  }
