--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,28 @@
-.cocktails-container {
-	display: flex;
-	gap: 20px;
-	flex-wrap: wrap;
-	.cocktail-container {
+body {
+	background-color: aliceblue;	
+	.login_div {
+		border: solid 1px black;
+		border-radius: 5px;
+		box-shadow: 0 0 10px gray;
+		background-color: rgb(208, 232, 253);
+		width: 300px;
+		margin-left: auto;
+		margin-right: auto;
 		display: flex;
 		flex-direction: column;
-		width: 360px;
-		& img {
-			width: 360px;
+		justify-content: center;
+		margin-top: 100px;
+		padding-bottom: 50px;
+		button {
+			width: 100px;
+			height: 35px;
+			margin-left: auto;
+			margin-right: auto;
+			background-color: rgb(158, 206, 248);
+			border-radius: 3px;
+		}
+		h1 {
+			text-align: center;
 		}
 	}
 }
