--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,49 @@
-.App {
+
+#root{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+
+
+}
+
+.container {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+		justify-content: space-around;
+}
+
+.posts {
+    width: 400px;
+    height: auto;
+    background-color: rgb(231, 216, 203);
+    border-radius: 10px;
+    margin: 20px ;
+	padding: 20px;
+
+}
+
+.button {
+     width: 150px;
+    height: 30px;
+    margin-top: 20px;
+    margin-left: 100px;
+	background-color: rgb(201, 182, 167); 
+    border-radius: 15px;
+    border-style: none;
+
+}
+
+.button:hover {
+    cursor: pointer;
+}
+.posts-container {
 	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
-}
-
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
+	flex-wrap: wrap;
+    background-color: rgb(231, 216, 203);
+    border-radius: 10px;
+    margin: 20px ;
+	padding: 20px;
 }
