--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,131 @@
-.App {
-	display: flex;
-	gap: 20px;
-}
-.languages {
-	border: solid 1px lightgray;
-	box-shadow: 0 0 10px gray;
-}
-.languages p {
-	background-color: red;
-	text-align: center;
-}
-.App img {
-	height: 200px;
-	aspect-ratio: 4/4;
-	pointer-events: none;
-}
-.number {
-	font-size: 40px;
-	text-align: center;
+
+:root{
+	--BODYBGCOLOR:#1B1D24;
+	--CardBGColor:#365A08;
+	--TextColor:bisque;
+	--BtnColor:#5D9D0B;
+	--BtnColor2:#72EB3A;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
-	}
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
+body{
+	background-color: var(--BODYBGCOLOR);
+}
+
+main{
 	display: flex;
 	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+	gap: 2rem;
+	background-color: var(--BODYBGCOLOR);
+	color: var(--TextColor);
+}
+.cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin-top: 2rem;
 }
 
-.App-link {
-	color: #61dafb;
+.cont div {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	gap:1rem;
+}
+
+.cont article {
+  max-width: 20rem;
+  width: 20rem;
+  height: 30rem;
+  box-shadow: 5px 5px 30px black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: scroll;
+  flex-wrap: wrap;
+  position: relative;
+  background-color: var(--CardBGColor);
+ 
+}
+
+.cont article img{
+	width: 100%;
+	height: 15rem;
+	position: absolute;
+	top:0;
+	mix-blend-mode:hard-light
+
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+
+
+.cont article h2 {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  position: absolute;
+  top: 17rem;
+  color: whitesmoke;
+  text-shadow: 1px 1px 20px ;
+
+}
+
+.cont article p {
+  font-size: 14px;
+  text-align: center;
+  position: absolute;
+  top:20rem;
+  color: var(--BtnColor2);
+  text-shadow: 1px 1px 20px ;
+
+}
+
+
+.cont article button {
+	position: absolute;
+	top: 28rem;
+	cursor: pointer;
+	height: 1.5rem;
+	width: 3rem;
+	border-radius: 20px;
+	border: none;
+	background-color: var(--BtnColor);
+	font-weight: bold ;
+	color: var(--TextColor);
+	box-shadow: 2px 2px 10px var(--BtnColor);
+}
+
+.cont article button:hover{
+	box-shadow: 5px 5px 30px;
+}
+
+.btn-wrp button {
+	height: 2rem;
+	width: 6rem;
+	font-size: 1rem;
+	font-weight: bold;
+	cursor: pointer;
+	border-radius: 10px;
+	border: none;
+	background-color: var(--BtnColor);
+	color: var(--TextColor);
+	box-shadow: 2px 2px 10px var(--BtnColor);
+}
+
+.btn-wrp button:hover{
+	box-shadow: 5px 5px 30px;
 }
