added home and about page, used styled components

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: linen;
+    background-color: #fdfaeb;
 }
 
 .container {
@@ -56,4 +56,15 @@ h2 {
     text-align: center;
     padding-top: 100px;
     font-weight: 600;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+.active {
+    color: red;
+    border-bottom: solid 1px rgb(252, 65, 65);
 }
