--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,23 @@
 		}
 	}
 }
+
+/* .parent-div .inner-div span {
+
+} */
+
+.dark {
+	button {
+		background-color: black !important;
+	}
+}
+
+.parent-div {
+	color: red;
+	& .inner-div {
+		background-color: green;
+		& span {
+			color: green;
+		}
+	}
+}
