did cocktails cart using Redux

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,40 @@
+* {
+	margin: 0;
+	padding: 0;
+}
 .cocktails-container {
 	display: flex;
 	gap: 20px;
 	flex-wrap: wrap;
+	width: 90%;
+	margin: 0 auto;
+	justify-content: center;
+	padding-top: 50px;
+	padding-bottom: 50px;
 	.cocktail-container {
 		display: flex;
 		flex-direction: column;
 		width: 360px;
+		border: solid 1px black;
+		border-radius: 5px;
+		box-shadow: 0 0 10px gray;
+		text-align: center;
+		padding: 5px;
 		& img {
-			width: 360px;
+			width: 200px;
+			margin: 0 auto;
 		}
+		& button {
+			width: 100px;
+			margin: 10px auto;
+			padding: 4px;
+		}
+	}
+}
+
+.cartDiv {
+	display: flex;
+	& p {
+		margin-top: 2px;
 	}
 }
