--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
-.App {
+html, body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	background-color: black;
+    color: white;
+
+}
+a {
+	text-decoration: none;
+	color:currentColor;
+	font-weight: bold;
+}
+
+/* .App {
 	display: flex;
 	gap: 20px;
 }
+
 .languages {
 	border: solid 1px lightgray;
 	box-shadow: 0 0 10px gray;
@@ -55,4 +70,4 @@ a {
 		color: #dcb;
 		outline: 5px dashed #000;
 	}
-}
+} */
