--- a/src/index.scss
+++ b/src/index.scss
@@ -38,3 +38,39 @@
 		margin-top: 2px;
 	}
 }
+
+.cart-container {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+	width: 100px;
+	height: auto;
+	justify-content: center;
+	background-color: white;
+	z-index: 2;
+	position: absolute;
+	right: 100px;
+	.cocktail-container {
+		display: flex;
+		flex-direction: column;
+		width: 100px;
+		height: auto;
+		border: solid 1px black;
+		border-radius: 5px;
+		box-shadow: 0 0 10px gray;
+		text-align: center;
+		padding: 5px;
+		& img {
+			width: 100px;
+			margin: 0 auto;
+		}
+		& button {
+			width: 70px;
+			margin: 10px auto;
+			padding: 4px;
+		}
+		& h2 {
+			font-size: 17px;
+		}
+	}
+}
